Fix: Add background size cover to prevent stretching of image uploaded

--- a/assets/scss/phase2/_profile.scss
+++ b/assets/scss/phase2/_profile.scss
@@ -125,6 +125,7 @@ $chilli: #ff4e4e;
         height: 120px;
         background-position: center;
         border-radius: 50%;
+        background-size: cover;
       }
 
       @include respond(mobile) {
